Fixed login page extra space

--- a/src/components/Auth/auth.scss
+++ b/src/components/Auth/auth.scss
@@ -1,4 +1,5 @@
 @import '~bootstrap/scss/bootstrap';
 
-
-
+.bg-img {
+  height: 100vh;
+}
