--- a/src/components/Messages/messages.scss
+++ b/src/components/Messages/messages.scss
@@ -1,6 +1,3 @@
 @import './styles/variables';
 @import "~bootstrap/scss/bootstrap";
 
-.msgBox {
-  background-color: #fffde7;
-}
