--- a/src/index.scss
+++ b/src/index.scss
@@ -10,10 +10,3 @@ body {
   padding-bottom: 20px;
   padding-right: 10px;
 }
-
-#messages-container{
-  height: 800px;
-  overflow-y: auto;
-}
-
-
